Lifehack first commit

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -132,6 +132,10 @@ def reactNativeArchitectures() {
 android {
     ndkVersion rootProject.ext.ndkVersion
 
+       aaptOptions {
+        noCompress 'tflite'
+    }
+
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
