--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-native-date-picker": "^4.2.2",
     "react-native-flash-message": "^0.2.1",
     "react-native-gesture-handler": "^2.4.2",
-    "react-native-image-picker": "^4.8.3",
+    "react-native-image-picker": "^4.8.4",
     "react-native-paper": "^4.12.1",
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.5",
@@ -31,7 +31,8 @@
     "react-native-svg": "^12.3.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-redux": "^8.0.2",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "tflite-react-native": "^0.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
